[package]
name = "memors"
version = "0.1.1"
edition = "2024"
authors = [ "shockpast" ]
description = "kitchen-sink for hooking functions (and finding patterns)"
repository = "https://github.com/shockpast/memors"
readme = ".github/README.md"
license = "MIT"
keywords = [ "hook", "signature", "pattern", "memory", "minhook" ]

[features]
default = [ "hook" ]
hook = [ "dep:minhook" ]

[lib]
name = "memors"

[dependencies]

[dependencies.minhook]
version = "0.9.0"
optional = true

[dependencies.windows]
version = "0.62.2"
features = [ "Win32_System_Memory", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_System_ProcessStatus" ]
